<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E1717"
    android:backgroundTint="@color/colorArrierePlanCalc"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.25"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/resultat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@color/arrierePlanCristauxLiquide"
                android:fontFamily="@font/digital"
                android:gravity="center|end"
                android:padding="10sp"
                android:text="@string/cristauxLiquide"
                android:textColor="@color/cristauxLiquideTexte"
                android:textSize="50sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear3"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAddition"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/couleurBtn"
                android:padding="10dp"
                android:text="@string/btnPlus"
                android:textColor="@color/couleurBtnTexte"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnSous"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/couleurBtn"
                android:backgroundTint="@color/couleurBtn"
                android:padding="10dp"
                android:text="@string/btnSous"
                android:textColor="@color/couleurBtnTexte"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnDiv"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/couleurBtn"
                android:padding="10dp"
                android:text="@string/btnDiv"
                android:textColor="@color/couleurBtnTexte"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnMult"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/couleurBtn"
                android:padding="10dp"
                android:text="@string/btnMult"
                android:textColor="@color/couleurBtnTexte"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear4"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.25"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <LinearLayout
            android:id="@+id/linear5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/linear6"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn7"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/couleurBtn"
                    android:padding="10dp"
                    android:text="@string/btn7"
                    android:textColor="@color/couleurBtnTexte"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btn4"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/couleurBtn"
                    android:padding="10dp"
                    android:text="@string/btn4"
                    android:textColor="@color/couleurBtnTexte"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear7"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn8"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/couleurBtn"
                    android:padding="10dp"
                    android:text="@string/btn8"
                    android:textColor="@color/couleurBtnTexte"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btn5"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/couleurBtn"
                    android:padding="10dp"
                    android:text="@string/btn5"
                    android:textColor="@color/couleurBtnTexte"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear8"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn9"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/couleurBtn"
                    android:padding="10dp"
                    android:text="@string/btn9"
                    android:textColor="@color/couleurBtnTexte"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btn6"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/couleurBtn"
                    android:padding="10dp"
                    android:text="@string/btn6"
                    android:textColor="@color/couleurBtnTexte"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear9"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnEffacer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="@color/couleurBtn"
                    android:padding="10dp"
                    android:text="@string/btnEffacer"
                    android:textColor="@color/couleurBtnTexte"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear10"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.25"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp">

        <LinearLayout
            android:id="@+id/linear11"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/linear12"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linear13"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn1"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@color/couleurBtn"
                        android:padding="10dp"
                        android:text="@string/btn1"
                        android:textColor="@color/couleurBtnTexte"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/btn2"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@color/couleurBtn"
                        android:padding="10dp"
                        android:text="@string/btn2"
                        android:textColor="@color/couleurBtnTexte"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear14"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn0"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:background="@color/couleurBtn"
                        android:padding="10dp"
                        android:text="@string/btnZero"
                        android:textColor="@color/couleurBtnTexte"
                        android:textSize="24sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear15"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/linear16"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn3"
                        android:layout_width="match_parent"
                        android:layout_height="0dip"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@color/couleurBtn"
                        android:padding="10dp"
                        android:text="@string/btn3"
                        android:textColor="@color/couleurBtnTexte"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/btnPoint"
                        android:layout_width="match_parent"
                        android:layout_height="0dip"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@color/couleurBtn"
                        android:padding="10dp"
                        android:text="@string/btnPoint"
                        android:textColor="@color/couleurBtnTexte"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear17"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnEgal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:background="@color/couleurBtn"
                        android:padding="10dp"
                        android:text="@string/btnEgal"
                        android:textColor="@color/couleurBtnTexte"
                        android:textSize="24sp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>